Все подправила, возможно есть проблемы в GameUIController