@@ -1,8 +1,10 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
-group = 'org.example'
+group = 'org.bombSquad'
 version = '1.0-SNAPSHOT'
 
 repositories {
@@ -12,6 +14,40 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+}
+
+javafx {
+    version = "24" // Версия JavaFX
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+application {
+    mainClass = 'bombSquad.Main'
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-Xlint:unchecked'
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'org.bombSquad.Main',
+                'JavaFX-Version': '24',
+                'Class-Path': configurations.runtimeClasspath.files.collect { it.name }.join(' ')
+        )
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+run {
+    jvmArgs = [
+            '--module-path', '/path/to/javafx-sdk/lib',
+            '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
 }
 
 test {
